# nba.lineup.optimization

./: .gitignore  AGENTS.md  README.md  lakers_optimizer.db  pyproject.toml
data/: lakers_roster_from_text.csv  lineups_from_text.csv  lineups_import.csv  players_import.csv
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  separator.tsx  skeleton.tsx
frontend/src/lib/: headshots.ts
lakers_lineup_optimization.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lakers_optimizer/: __init__.py  _pydantic_fallback.py  api.py  cli.py  config.py  db.py  ingest.py  llm.py  models.py  optimizer.py  repository.py  schemas.py  scoring.py
tests/: conftest.py  test_api.py  test_file_import.py  test_optimizer.py  test_scoring.py
